--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ ACCEPT_TOKENS=NATIVE:eth, ERC20:0xfd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9
 MIN_CONFIRMATIONS=1
 ORDER_TTL_MIN=15
 CORS_ALLOW=https://www.x5capital.xyz, https://x1ao5.github.io/x5capital
+DATABASE_URL=postgres://x5_admin:16UhPA1qGLWOM0e6Ex6utchP96JFQFe1@dpg-d3hid8ogjchc73ah8ku0-a.oregon-postgres.render.com:5432/x5_market
