--- a/backend/package.json
+++ b/backend/package.json
@@ -11,4 +11,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
+  "dependencies": {
+    "pg": "^8.11.5"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "db:init": "node initDB.js"
+  }
+
+
 }
