--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,19 @@
 {
   "name": "x5-backend",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "engines": { "node": ">=18" },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  }
-  "dependencies": {
-    "pg": "^8.11.5"
-  },
+  "engines": { "node": ">=20.0.0" },
   "scripts": {
     "start": "node server.js",
     "db:init": "node initDB.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "pg": "^8.11.5",
+    "morgan": "^1.10.0",
+    "body-parser": "^1.20.2"
   }
-
-
 }
